# work-automata

./: .ansible-lint  .ansible.cfg  .gitignore  Makefile  README.md  ansible.cfg  backend-dev.setup.yaml  dockerdev.setup.yaml  extjsdev.setup.yaml  hci-base.setup.yaml  hosts.yml  mldev.setup.yaml  recipes.yaml  setup-ml-env.yml  uidev.setup.yaml  workstand.setup.yaml  workstand.update.yaml
backend-dev.setup/files/: .bashrc  config  test.cfg
backend-dev.setup/tasks/: main.yaml
baseserver.setup/handlers/: main.yaml
baseserver.setup/tasks/: main.yaml
common/handlers/: main.yaml
common/tasks/: main.yaml  sync_my_configs.yaml
devenv.setup/files/: .npmrc  gen-key-script
devenv.setup/handlers/: main.yaml
devenv.setup/tasks/: main.yaml
docker.setup/tasks/: main.yaml
dockerdev.setup/tasks/: main.yaml
emacs.setup/tasks/: main.yaml
extjsdev.setup/files/: pstorage-ui.conf
extjsdev.setup/tasks/: main.yaml
group_vars/: mldev.yml  workstand.yaml
hci-base.setup/tasks/: main.yaml
host_vars/: btests.yaml  docker-dev.yaml  extjs-dev.yaml  hci-1.yaml  hci-2.yaml  hci-3.yaml  mldev-aci.yaml  mldev.yaml  mldev.yml
mldev.setup/files/: jupyter_notebook_config.json.j2
mldev.setup/tasks/: main.yaml
neovim.setup/handlers/: main.yaml
neovim.setup/tasks/: main.yaml
nginx.setup/files/: nginx.conf  nginx.conf.j2
nginx.setup/tasks/: main.yaml
roles/devenv/files/: toprc
roles/jupyter/files/: jupyter_nbconvert_config.py  jupyter_notebook_config.py  pyproject.toml
spark.setup/tasks/: main.yaml
uidev.setup/tasks/: main.yaml
workstand.setup/files/: config
(+33 files in other folders)
