[tool.poetry]
name = "jupyter"
version = "0.0.1"
description = "Virtual environmeent specification for Jupyter notebook."
authors = ["Alexander Kurbatov <Alexander.Kurbatov@acronis.com>"]


[tool.poetry.dependencies]
python = "^3.7.1"
humanize = "^3.14.0"
lightgbm = "2.3.1"
notebook = "^6.4.8"
jupyterlab = "^3.2.9"
jupyter-contrib-nbextensions = "^0.5.1"
line-profiler = "^3.4.0"
memory-profiler = "^0.60.0"
aiofiles = "^0.8.0"
aiohttp = "^3.8.1"
matplotlib = "^3.5.1"
nbconvert = "^6.4.1"
seaborn = "^0.11.2"
numpy = ">=1.20.2"
tqdm = "^4.62.3"
scikit-learn = "^1.0.2"
shap = "^0.40.0"
