[tool.poetry]
name = "jupyter"
version = "0.0.1"
description = "Virtual environment specification for Jupyter notebook."
authors = ["Alexander Kurbatov <Alexander.Kurbatov@acronis.com>"]


[tool.poetry.dependencies]
python = "^3.12"
humanize = "^4.10.0"
notebook = "^7.2.2"
jupyterlab = "^4.2.5"
line-profiler = "^4.1.3"
memory-profiler = "^0.61.0"
aiofiles = "^24.1.0"
aiohttp = "^3.11.11"
matplotlib = "3.9.2"
nbconvert = "^7.16.4"
seaborn = "^0.13.2"
numpy = "^2.1.1"
tqdm = "^4.66.5"
